<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/image_gender"
        android:layout_width="16dp"
        android:layout_height="150dp"
        android:background="@color/colorLightBlue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/image"
        android:layout_width="120dp"
        android:layout_height="110dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/room_image_stroke"
        android:contentDescription="@string/image_upload_chooser_text"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/image_gender"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/nanumsquare_eb"
        android:text="@string/price"
        android:textSize="28sp"
        app:layout_constraintStart_toEndOf="@+id/image"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        android:fontFamily="@font/nanumsquare_bold"
        android:text="@string/gender"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/image"
        app:layout_constraintTop_toBottomOf="@+id/room_form" />

    <TextView
        android:id="@+id/space"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/nanumsquare_bold"
        android:text="@string/slide"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/text_gender"
        app:layout_constraintTop_toBottomOf="@+id/room_form" />

    <TextView
        android:id="@+id/text_address"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        android:fontFamily="@font/nanumsquare_bold"
        android:maxLines="1"
        android:text="@string/address"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/space"
        app:layout_constraintTop_toBottomOf="@+id/room_form" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="23dp"
        android:layout_height="19dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:scaleType="fitCenter"
        app:layout_constraintStart_toEndOf="@+id/image"
        app:layout_constraintTop_toBottomOf="@+id/text_gender"
        app:srcCompat="@drawable/calendar" />

    <TextView
        android:id="@+id/period_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/nanumsquare_bold"
        android:text="@string/yyyymmdd"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/text_gender" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/nanumsquare_bold"
        android:text="@string/m"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/period_start"
        app:layout_constraintTop_toBottomOf="@+id/text_address" />

    <TextView
        android:id="@+id/period_after"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/nanumsquare_bold"
        android:text="@string/yyyymmdd"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/text_address" />

    <TextView
        android:id="@+id/room_form"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/nanumsquare_bold"
        android:text="@string/room_form"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/image"
        app:layout_constraintTop_toBottomOf="@+id/price" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/nanumsquare_bold"
        android:text="@string/slide"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/room_form"
        app:layout_constraintTop_toBottomOf="@+id/price" />

    <TextView
        android:id="@+id/text_room_floor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/nanumsquare_bold"
        android:text="@string/floor"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/textView9"
        app:layout_constraintTop_toBottomOf="@+id/price" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/nanumsquare_bold"
        android:text="@string/slide"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/text_room_floor"
        app:layout_constraintTop_toBottomOf="@+id/price" />

    <TextView
        android:id="@+id/text_room_width"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/nanumsquare_bold"
        android:text="@string/width"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/textView11"
        app:layout_constraintTop_toBottomOf="@+id/price" />

    <TextView
        android:id="@+id/text_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:fontFamily="@font/nanumsquare_bold"
        android:gravity="right"
        android:text="@string/date"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/text_address"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="36dp"
        android:fontFamily="@font/nanumsquare_bold"
        android:gravity="end"
        android:text="@string/one_night"
        app:layout_constraintStart_toEndOf="@+id/price"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>