<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/board_list_stroke"
    >

    <ImageView
        android:id="@+id/profile"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/profile"
        android:scaleType="fitCenter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@color/colorBlack" />

    <TextView
        android:id="@+id/user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/nanumsquare_eb"
        android:text="@string/anonymous"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/profile"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/comment"
        android:layout_width="310dp"
        android:layout_height="37dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="28dp"
        android:fontFamily="@font/nanumsquare_bold"
        android:padding="5dp"
        android:text="@string/comment"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile" />

    <TextView
        android:id="@+id/text_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="26dp"
        android:layout_marginBottom="5dp"
        android:fontFamily="@font/nanumsquare_bold"
        android:gravity="end"
        android:text="@string/date"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.968"
        app:layout_constraintStart_toEndOf="@+id/comment"
        app:layout_constraintTop_toBottomOf="@+id/comment"
        app:layout_constraintVertical_bias="0.662" />


</androidx.constraintlayout.widget.ConstraintLayout>