<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context=".Activity.RoomItemActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/image_room"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/text_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/nexon_gothic_bold"
                android:textColor="@color/colorBlack"
                android:text="@string/price"
                android:textSize="28sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/image_room" />

            <TextView
                android:id="@+id/text_phone"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="16dp"
                android:maxLength="11"
                android:gravity="right"
                android:textSize="15sp"
                android:fontFamily="@font/nexon_gothic"
                android:text="@string/phone_number"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/image_room" />

            <ImageView
                android:id="@+id/image_gender"
                android:layout_width="380dp"
                android:layout_height="8dp"
                android:layout_marginStart="16dp"
                android:background="@color/colorSkyBlue"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_price" />

            <TextView
                android:id="@+id/text_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/nexon_gothic_bold"
                android:textColor="@color/colorBlack"
                android:textSize="18sp"
                android:text="@string/address"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/image_gender" />


            <TextView
                android:id="@+id/text_gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/nexon_gothic"
                android:textSize="12sp"
                android:text="@string/gender"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_address" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/nexon_gothic"
                android:textSize="12sp"
                android:text="@string/slide"
                app:layout_constraintStart_toEndOf="@+id/text_gender"
                app:layout_constraintTop_toBottomOf="@+id/text_address" />

            <TextView
                android:id="@+id/text_room_form"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/nexon_gothic"
                android:textSize="12sp"
                android:text="@string/room_form"
                app:layout_constraintStart_toEndOf="@+id/textView13"
                app:layout_constraintTop_toBottomOf="@+id/text_address" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/nexon_gothic"
                android:textSize="12sp"
                android:text="@string/slide"
                app:layout_constraintStart_toEndOf="@+id/text_room_form"
                app:layout_constraintTop_toBottomOf="@+id/text_address" />

            <TextView
                android:id="@+id/text_room_floor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/nexon_gothic"
                android:textSize="12sp"
                android:text="@string/floor"
                app:layout_constraintStart_toEndOf="@+id/textView15"
                app:layout_constraintTop_toBottomOf="@+id/text_address" />

            <TextView
                android:id="@+id/textView17"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/nexon_gothic"
                android:textSize="12sp"
                android:text="@string/slide"
                app:layout_constraintStart_toEndOf="@+id/text_room_floor"
                app:layout_constraintTop_toBottomOf="@+id/text_address" />

            <TextView
                android:id="@+id/text_room_width"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/nexon_gothic"
                android:textSize="12sp"
                android:text="@string/width"
                app:layout_constraintStart_toEndOf="@+id/textView17"
                app:layout_constraintTop_toBottomOf="@+id/text_address" />

            <FrameLayout
                android:id="@+id/frameLayout"
                android:layout_width="380dp"
                android:layout_height="100dp"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_room_form">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/room_activity_stroke" />

                <LinearLayout
                    android:layout_width="188dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:layout_gravity="center"
                        android:fontFamily="@font/nexon_gothic"
                        android:text="@string/check_in"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/text_start_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/nexon_gothic_bold"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/rent_period"
                        android:textColor="@color/colorBlack"
                        android:textSize="18sp" />

                </LinearLayout>

                <ImageView
                    android:layout_width="4dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:background="@color/colorLightGray" />

                <LinearLayout
                    android:layout_width="188dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="192dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="20dp"
                        android:fontFamily="@font/nexon_gothic"
                        android:text="@string/check_out"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/text_end_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/nexon_gothic_bold"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/rent_period"
                        android:textColor="@color/colorBlack"
                        android:textSize="18sp" />

                </LinearLayout>

            </FrameLayout>

            <TextView
                android:id="@+id/textView19"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                android:text="@string/introduce"
                android:textColor="@color/colorBlack"
                android:fontFamily="@font/nexon_gothic_bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/frameLayout" />

            <TextView
                android:id="@+id/text_description"
                android:padding="5dp"
                android:layout_width="380dp"
                android:layout_height="80dp"
                android:layout_marginTop="4dp"
                android:background="@drawable/button_custom"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView19" />

            <Button
                android:id="@+id/btn_call"
                android:layout_width="380dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/button_stroke"
                android:fontFamily="@font/nexon_gothic_bold"
                android:text="@string/call"
                android:textColor="@color/colorWhite"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_description" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>




</androidx.constraintlayout.widget.ConstraintLayout>