<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/board_list_stroke">
    <LinearLayout
        android:layout_marginTop="18dp"
        android:layout_marginStart="16dp"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/text_title"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:text="@string/title"
            android:textSize="15sp"
            android:fontFamily="@font/nanumsquare_eb"
            android:padding="5dp"/>
        <TextView
            android:id="@+id/text_content"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:textSize="12sp"
            android:text="@string/content"
            android:padding="5dp"
            android:fontFamily="@font/nanumsquare_bold"
            android:maxLength="30"
            />
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/text_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nanumsquare_bold"
                android:layout_marginBottom="12dp"
                android:text="@string/date"
                android:padding="5dp"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nanumsquare_bold"
                android:textSize="12sp"
                android:paddingTop="5dp"
                android:text="@string/slide"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nanumsquare_bold"
                android:paddingTop="5dp"
                android:layout_marginStart="4dp"
                android:text="@string/anonymous"
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_marginEnd="12dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/like"
                android:layout_width="15dp"
                android:layout_height="13dp"
                android:layout_marginStart="28dp"
                android:layout_marginEnd="8dp"
                android:contentDescription="@string/comment_number"
                android:scaleType="fitCenter"
                android:layout_marginTop="22dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/text_comment_size"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                app:srcCompat="@drawable/like" />
            <TextView
                android:id="@+id/text_like_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="12dp"
                android:fontFamily="@font/nanumsquare_bold"
                android:layout_marginTop="12dp"
                android:text="@string/like_number"
                android:textSize="12sp"
                android:layout_gravity="center"
                android:textColor="@color/colorLightPink"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/space"
                app:layout_constraintTop_toTopOf="parent" />


        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp">
            <ImageView
                android:id="@+id/comment"
                android:layout_width="15dp"
                android:layout_height="13dp"
                android:layout_marginStart="28dp"
                android:layout_marginEnd="8dp"
                android:contentDescription="@string/comment_number"
                android:scaleType="fitCenter"
                android:layout_marginTop="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/text_comment_size"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                app:srcCompat="@drawable/comment" />
            <TextView
                android:id="@+id/text_comment_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="12dp"
                android:fontFamily="@font/nanumsquare_bold"
                android:layout_marginTop="6dp"
                android:text="@string/comment_number"
                android:textSize="12sp"
                android:layout_gravity="center"
                android:textColor="@color/colorSkyBlue"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/space"
                app:layout_constraintTop_toTopOf="parent" />

        </LinearLayout>



    </LinearLayout>

</LinearLayout>